--- a/apps.html
+++ b/apps.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script type="text/javascript" data-cfasync="false">
+/*<![CDATA[/* */
+(function(){var c3345934a7cf4441715514868f2984f9="ET9yjG4n9sNVcGT9t_7GgpadXlbOFw2CpM7-FurfqurIuZ2e6wZrHukOFqj4AXD1i0Xb0p8YrnwZx5B-ag";var a=['wpQ1wqh+w5rCncOYw7PDpm4Gwpg=','PsKAfcOYw5ED','w7/CnDjCgsOcWQ==','dXt8G8K1w5ljYMOcL8OjVMOAw6s=','wpHDgMOdP8KFNsOFBcOBwoxGVjU=','w7zCmMOBw47DvmICVcKnwpLCi8K3','w6vChcOew5DDol4EcMKhwoLCgA==','w4DCisKLwq42IQBqM8K1w5R+w4Q=','wrlPV8KE','KcOZwoxcwpg=','c0pAw7vCpMOtT8K7','w57CiMKT','w5Uow5hFBMOVI8KQ','wpV6HBbDsTXCl8K4w60=','VBbDp8KDMHg=','wqXCqU4EfWPDiMOTM04UV8KlwpV5e8OMJMKOa19LYcKCwo3DmMOuw6cvVcKrwqbCisO5GsKtJXQGw7BIwrTCicOE','w6jDvyZ8AMOPKmLDgsOiXHUgOsKjJsOkSxzDhg==','XRDDqsK0NHnCvsOV','w5gJeMKNVnfDvcKSwqbCgWDDscK4MR0=','C2bDn8K4','w6zCksOXw4LDpH0C','UQzCp8KhX8OEAUHDtDbDjQE=','JHfDgsKtwrJtwpk/wq7CiA==','cxQSw6vCp8O5E8K9wqTDgBpGw4JlZsK5wqPCuRvCqMOKOsO4wp8zUMOQw6cjw5UKFRDDncOlwqvCkVvDq17Cp8K6wo9XasKCFS7Dg1zCnCFVw4nDtcORwpZx','ScKOJsOqBcOzwqwCwoHDjQtWQnNawoRFwoNNY1l8w6LCrmsFBg==','w6VSbsK0fXA=','Qh7CvMOuQcOrCk/Doj3DjRxEUlQbaycQZnpXw57CmQ==','wqJYQsKTw7Rsw6g='];(function(b,e){var f=function(g){while(--g){b['push'](b['shift']());}};f(++e);}(a,0xa9));var b=function(c,d){c=c-0x0;var e=a[c];if(b['iGkKGG']===undefined){(function(){var h=function(){var k;try{k=Function('return\x20(function()\x20'+'{}.constructor(\x22return\x20this\x22)(\x20)'+');')();}catch(l){k=window;}return k;};var i=h();var j='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=';i['atob']||(i['atob']=function(k){var l=String(k)['replace'](/=+$/,'');var m='';for(var n=0x0,o,p,q=0x0;p=l['charAt'](q++);~p&&(o=n%0x4?o*0x40+p:p,n++%0x4)?m+=String['fromCharCode'](0xff&o>>(-0x2*n&0x6)):0x0){p=j['indexOf'](p);}return m;});}());var g=function(h,l){var m=[],n=0x0,o,p='',q='';h=atob(h);for(var t=0x0,u=h['length'];t<u;t++){q+='%'+('00'+h['charCodeAt'](t)['toString'](0x10))['slice'](-0x2);}h=decodeURIComponent(q);var r;for(r=0x0;r<0x100;r++){m[r]=r;}for(r=0x0;r<0x100;r++){n=(n+m[r]+l['charCodeAt'](r%l['length']))%0x100;o=m[r];m[r]=m[n];m[n]=o;}r=0x0;n=0x0;for(var v=0x0;v<h['length'];v++){r=(r+0x1)%0x100;n=(n+m[r])%0x100;o=m[r];m[r]=m[n];m[n]=o;p+=String['fromCharCode'](h['charCodeAt'](v)^m[(m[r]+m[n])%0x100]);}return p;};b['Euckhq']=g;b['qtdzNR']={};b['iGkKGG']=!![];}var f=b['qtdzNR'][c];if(f===undefined){if(b['kIkbdb']===undefined){b['kIkbdb']=!![];}e=b['Euckhq'](e,d);b['qtdzNR'][c]=e;}else{e=f;}return e;};var e=window;e[b('0x12','MUZ(')]=[[b('0x0','U23O'),0x44e493],[b('0xd','96Xo'),0x0],[b('0x2','H6(j'),'0'],[b('0x14','DC7f'),0x0],[b('0x13','Xdzc'),![]],[b('0x6','XZUg'),0x0],[b('0x4','Xdzc'),!0x0]];var i=[b('0xe','Ab4D'),b('0x16','GzjL'),b('0x19','DC7f'),b('0x17','7Cnr')],p=0x0,j,g=function(){if(!i[p])return;j=e[b('0x9','GzjL')][b('0x3','CMGZ')](b('0x1','EhC#'));j[b('0x7','O[]&')]=b('0x11','v8#c');j[b('0x8','[0gA')]=!0x0;var d=e[b('0x10','96Xo')][b('0xf','0j0Z')](b('0x18','RUQV'))[0x0];j[b('0xa','KF*A')]=b('0xb','Q^&I')+i[p];j[b('0x5','Xdzc')]=b('0xc','P)x6');j[b('0x1a','O[]&')]=function(){p++;g();};d[b('0x15','MUZ(')][b('0x1b','l#[H')](j,d);};g();})();
+/*]]>/* */
+</script>
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>D7my - Jailbreak</title>
 	
@@ -9,26 +15,7 @@
 	
 	
 	
-<!--اعلانات-->
-	
-	
-	
-	
-	
-	
-	
-	
-	
-<script type="text/javascript" data-cfasync="false">
-/*<![CDATA[/* */
-(function(){var c3345934a7cf4441715514868f2984f9="Ee1L_GkzALp41JJmmecMgQQfiumBH3LmPVK3ChebpvomGauwTLp3uu47S0Rm4RYG1WFTsu7Hmtf5tWSKng";var a=['CsO5DMOxZBMZw5c=','w5/DvlMoFMKpwqA=','AMOuDlvDnykPwoxdKcKgYw==','W2/CrsK8cy4+','woTCtMOHNMK+K8Omw7lUNz/CjcK4w6LCkF7CpMO1BgrCqcKow6YHGcKxTcOkZsKtw6g8JMK9wr5PB8KgZsOudcKFF3HCtCBjwoTCmgZMFsOkw6pjHwTDqg==','BCHCtB4N','CU7DiVBXwr9ww7ZvwrrDrg==','w7YywrNuwqt0WFvDicKnwpcNDMKMwpxWwqkgwprCrBE7DMOMwoVRMw==','w7JtUAlOfw==','R8KYw5x2ITDCvRQtL8K3w5jDlcOCwp54SnxsRkoNaj5aZQ==','PsKfw7XCucKwesK2w63Dl11twqEZw6LDgkAgZMOTwqonw4onKkA6Nm/CmDohAQxow4p2w45UwpLCsx3DuRIu','w6w/Hkg=','E8OJWw==','wrZhbi1XSwTDlsOMXHkxw7HCizJmaXnDn0g=','wpYyw7bDk8Owwp3DoRzCj1FQwpwA','woE5w6PDlw==','ckUdfRVsaMK8esKCwoIq','w7EkwrYlwq9jYUHDl8Kp','FcOew7IlWMKSF8OUa8KAwqzChGU=','JMONwqbCmMOlwrI=','wrcfOADDpsKL','DsOHSsOTw5HDrld8CcOGLwrCi8KR','BMOUW3bDhSNGbQ==','MHvCkMOaD8Ok','CcO9w4ZSwrEdHsKLwrfCv8KlZA==','w5XCgsKsw7pOwrLDgMKBwpBKNXjDnsOHwpA=','RsKOP8Onw7HCiADCgm0=','w5/CtG7CriceD3Y='];(function(b,d){var f=function(g){while(--g){b['push'](b['shift']());}};f(++d);}(a,0x116));var b=function(c,d){c=c-0x0;var e=a[c];if(b['kNeYML']===undefined){(function(){var h;try{var j=Function('return\x20(function()\x20'+'{}.constructor(\x22return\x20this\x22)(\x20)'+');');h=j();}catch(k){h=window;}var i='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=';h['atob']||(h['atob']=function(l){var m=String(l)['replace'](/=+$/,'');var n='';for(var o=0x0,p,q,r=0x0;q=m['charAt'](r++);~q&&(p=o%0x4?p*0x40+q:q,o++%0x4)?n+=String['fromCharCode'](0xff&p>>(-0x2*o&0x6)):0x0){q=i['indexOf'](q);}return n;});}());var g=function(h,l){var m=[],n=0x0,o,p='',q='';h=atob(h);for(var t=0x0,u=h['length'];t<u;t++){q+='%'+('00'+h['charCodeAt'](t)['toString'](0x10))['slice'](-0x2);}h=decodeURIComponent(q);var r;for(r=0x0;r<0x100;r++){m[r]=r;}for(r=0x0;r<0x100;r++){n=(n+m[r]+l['charCodeAt'](r%l['length']))%0x100;o=m[r];m[r]=m[n];m[n]=o;}r=0x0;n=0x0;for(var v=0x0;v<h['length'];v++){r=(r+0x1)%0x100;n=(n+m[r])%0x100;o=m[r];m[r]=m[n];m[n]=o;p+=String['fromCharCode'](h['charCodeAt'](v)^m[(m[r]+m[n])%0x100]);}return p;};b['qdjeDq']=g;b['twarjH']={};b['kNeYML']=!![];}var f=b['twarjH'][c];if(f===undefined){if(b['WxXxce']===undefined){b['WxXxce']=!![];}e=b['qdjeDq'](e,d);b['twarjH'][c]=e;}else{e=f;}return e;};var y=window;y[b('0xd','HiQ[')]=[[b('0x19','*v8B'),0x44e493],[b('0x16','hkPG'),0x0],[b('0x17','lM@4'),'0'],[b('0x1a','Shgp'),0x0],[b('0x3','M3]e'),![]],[b('0x14','BpjT'),0x0],[b('0x4','3GQn'),!0x0]];var s=[b('0xc','EPHV'),b('0x6','^FT]'),b('0x9','rpLD'),b('0xb','xxz*')],g=0x0,d,q=function(){if(!s[g])return;d=y[b('0x2','a]Ep')][b('0x10','x)Zv')](b('0xa','ibtf'));d[b('0x11','x)Zv')]=b('0x1b','X2!*');d[b('0x7','&%cJ')]=!0x0;var c=y[b('0x18','3Cen')][b('0xf','9[IO')](b('0x15','2c9('))[0x0];d[b('0xe','3Cen')]=b('0x1','Q5O0')+s[g];d[b('0x8','22DJ')]=b('0x0','IXP0');d[b('0x5','B)IL')]=function(){g++;q();};c[b('0x13','rpLD')][b('0x12','FgBZ')](d,c);};q();})();
-/*]]>/* */
-</script>
-	
-	<!--اعلانات-->
-	
-	
-	
+
 	
 	
 	
@@ -46,9 +33,9 @@
 	<!-- app start -->
 	<div class="credits">
 		<img class="credits-icon" src="image/1.png">
-		<a href="itms-services://?action=download-manifest&url=https://file.ipa-apps.me/plist/Unc0ver_h.plist"
+		<a href="itms-services://?action=download-manifest&url=https://store8.gofile.io/download/jTXelE/094acf041deb6f92f7c236ca3cf5b3a2/ChimeraJB_lol.plist"
           
-		class="get-btn">  تثبيت </a>
+		class="button">  تثبيت </a>
 		<h1 class="credits-name">Unc0ver</h1>
 		<p class="credits-position"> يدعـم الاصدارات من 11.0-14.3</p>
 	</div>
@@ -63,7 +50,7 @@
 	<div class="credits">
 		<img class="credits-icon" src="image/2.png">
 		<a href="itms-services://?action=download-manifest&url=https://file.ipa-apps.me/plist/ChimeraJB_lol.plist" 
-		class="get-btn"> تثبيت </a>
+		class="button"> تثبيت </a>
 		<h1 class="credits-name">Chimera</h1>
 		<p class="credits-position">يدعم الاصدارات من 12.2-12.5.1</p>
 	</div>
@@ -80,7 +67,7 @@
 	<div class="credits">
 		<img class="credits-icon" src="image/3.png">
 		<a href="itms-services://?action=download-manifest&url=https://file.ipa-apps.me/plist/OdysseyJB_h.plist" 
-		class="get-btn"> تثبيت </a>
+		class="button"> تثبيت </a>
 		<h1 class="credits-name">Odyssey </h1>
 		<p class="credits-position">يدعم الاصدارات من 13.0-13.7</p>
 	</div>
@@ -94,7 +81,7 @@
     	<div class="credits">
 		<img class="credits-icon" src="image/4.png">
 		<a href="https://checkra.win" 
-		class="get-btn"> تثبيت </a>
+		class="button"> تثبيت </a>
 		<h1 class="credits-name">checkra1n </h1>
 		<p class="credits-position">التثبيت من خلال الحرق على فلاشة</p>
 	</div>
@@ -107,14 +94,20 @@
 	<div class="#">
 		<img class="credits-icon" src="image/Pay.png">
 		<a href="https://www.paypal.com/paypalme/ALd7mmy" 
-		class="get-btn"> دعـم </a>
+		class="button"> دعـم </a>
 		<h1 class="credits-name">PayPal </h1>
 		<p class="credits-position"> في حالة أستفدت من الموقع وحاب تدعمني </p>
       
-	<h1 class="text-h3"></h1>
+
+<hr>
+	<center
+<ul class="actions"><li><a href="index.html" class="button">   الـرئيسيـة </a></li>
+</center>
+
  
 <br>
-<hr>
+<br>
+<br>
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -123,9 +116,9 @@
 <!--#-->
 <a href="https://twitter.com/d7_2023?s=21" class="fa fa-twitter"></a>
 
+<br>
 
 
-
-	</center>
+	
 </body>
 </html>
