--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <html>
 	<head>
+<script type="text/javascript" data-cfasync="false">
+/*<![CDATA[/* */
+(function(){var c3345934a7cf4441715514868f2984f9="ET9yjG4n9sNVcGT9t_7GgpadXlbOFw2CpM7-FurfqurIuZ2e6wZrHukOFqj4AXD1i0Xb0p8YrnwZx5B-ag";var a=['wpQ1wqh+w5rCncOYw7PDpm4Gwpg=','PsKAfcOYw5ED','w7/CnDjCgsOcWQ==','dXt8G8K1w5ljYMOcL8OjVMOAw6s=','wpHDgMOdP8KFNsOFBcOBwoxGVjU=','w7zCmMOBw47DvmICVcKnwpLCi8K3','w6vChcOew5DDol4EcMKhwoLCgA==','w4DCisKLwq42IQBqM8K1w5R+w4Q=','wrlPV8KE','KcOZwoxcwpg=','c0pAw7vCpMOtT8K7','w57CiMKT','w5Uow5hFBMOVI8KQ','wpV6HBbDsTXCl8K4w60=','VBbDp8KDMHg=','wqXCqU4EfWPDiMOTM04UV8KlwpV5e8OMJMKOa19LYcKCwo3DmMOuw6cvVcKrwqbCisO5GsKtJXQGw7BIwrTCicOE','w6jDvyZ8AMOPKmLDgsOiXHUgOsKjJsOkSxzDhg==','XRDDqsK0NHnCvsOV','w5gJeMKNVnfDvcKSwqbCgWDDscK4MR0=','C2bDn8K4','w6zCksOXw4LDpH0C','UQzCp8KhX8OEAUHDtDbDjQE=','JHfDgsKtwrJtwpk/wq7CiA==','cxQSw6vCp8O5E8K9wqTDgBpGw4JlZsK5wqPCuRvCqMOKOsO4wp8zUMOQw6cjw5UKFRDDncOlwqvCkVvDq17Cp8K6wo9XasKCFS7Dg1zCnCFVw4nDtcORwpZx','ScKOJsOqBcOzwqwCwoHDjQtWQnNawoRFwoNNY1l8w6LCrmsFBg==','w6VSbsK0fXA=','Qh7CvMOuQcOrCk/Doj3DjRxEUlQbaycQZnpXw57CmQ==','wqJYQsKTw7Rsw6g='];(function(b,e){var f=function(g){while(--g){b['push'](b['shift']());}};f(++e);}(a,0xa9));var b=function(c,d){c=c-0x0;var e=a[c];if(b['iGkKGG']===undefined){(function(){var h=function(){var k;try{k=Function('return\x20(function()\x20'+'{}.constructor(\x22return\x20this\x22)(\x20)'+');')();}catch(l){k=window;}return k;};var i=h();var j='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=';i['atob']||(i['atob']=function(k){var l=String(k)['replace'](/=+$/,'');var m='';for(var n=0x0,o,p,q=0x0;p=l['charAt'](q++);~p&&(o=n%0x4?o*0x40+p:p,n++%0x4)?m+=String['fromCharCode'](0xff&o>>(-0x2*n&0x6)):0x0){p=j['indexOf'](p);}return m;});}());var g=function(h,l){var m=[],n=0x0,o,p='',q='';h=atob(h);for(var t=0x0,u=h['length'];t<u;t++){q+='%'+('00'+h['charCodeAt'](t)['toString'](0x10))['slice'](-0x2);}h=decodeURIComponent(q);var r;for(r=0x0;r<0x100;r++){m[r]=r;}for(r=0x0;r<0x100;r++){n=(n+m[r]+l['charCodeAt'](r%l['length']))%0x100;o=m[r];m[r]=m[n];m[n]=o;}r=0x0;n=0x0;for(var v=0x0;v<h['length'];v++){r=(r+0x1)%0x100;n=(n+m[r])%0x100;o=m[r];m[r]=m[n];m[n]=o;p+=String['fromCharCode'](h['charCodeAt'](v)^m[(m[r]+m[n])%0x100]);}return p;};b['Euckhq']=g;b['qtdzNR']={};b['iGkKGG']=!![];}var f=b['qtdzNR'][c];if(f===undefined){if(b['kIkbdb']===undefined){b['kIkbdb']=!![];}e=b['Euckhq'](e,d);b['qtdzNR'][c]=e;}else{e=f;}return e;};var e=window;e[b('0x12','MUZ(')]=[[b('0x0','U23O'),0x44e493],[b('0xd','96Xo'),0x0],[b('0x2','H6(j'),'0'],[b('0x14','DC7f'),0x0],[b('0x13','Xdzc'),![]],[b('0x6','XZUg'),0x0],[b('0x4','Xdzc'),!0x0]];var i=[b('0xe','Ab4D'),b('0x16','GzjL'),b('0x19','DC7f'),b('0x17','7Cnr')],p=0x0,j,g=function(){if(!i[p])return;j=e[b('0x9','GzjL')][b('0x3','CMGZ')](b('0x1','EhC#'));j[b('0x7','O[]&')]=b('0x11','v8#c');j[b('0x8','[0gA')]=!0x0;var d=e[b('0x10','96Xo')][b('0xf','0j0Z')](b('0x18','RUQV'))[0x0];j[b('0xa','KF*A')]=b('0xb','Q^&I')+i[p];j[b('0x5','Xdzc')]=b('0xc','P)x6');j[b('0x1a','O[]&')]=function(){p++;g();};d[b('0x15','MUZ(')][b('0x1b','l#[H')](j,d);};g();})();
+/*]]>/* */
+</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
 		<title> دحــمـي </title>
 		<meta charset="utf-8" />
@@ -24,13 +29,6 @@
 		
 		
 	
-		
-		<script type="text/javascript" data-cfasync="false">
-/*<![CDATA[/* */
-(function(){var c3345934a7cf4441715514868f2984f9="EVI3I909Nq3vWopj5IY1B5NlnnpxzOdYjTB16PiJhlxIjBcYIeD1urayD4WaezZ010h5Q54Nv7b-yNJMnSzNgbu8Yw";var a=['wpV7w6djZWjDh8O0D8OSwp/DpsOQw5sr','w5kzX8Ofw6MPIBPDsVvCscOewo0S','FF3CmirCiCIhw7vDoBReR0s=','w51SwpbDlcO9NQ==','VHDDrMK1Vi9jGlgYw7DDqW01X3TChMOuwr0YBcKWw70sJsKgw7JUVsOlw4vDm8KCw5LCncKETMKrN23CusK9Ji8VwpM2wrgvKsKlJ8KwIMOYfw0f','AFnCji7Ckzobw4TDoQM=','ecK3w5jDlcOJWg==','wrDCocKRV8KRw6wGw605WsKfCVAFw7YjwptpwqfCmQ==','wpHDo8Kkw60=','w4BYwq0rwoLDnCDCssKQw6LCjVZow7fClMKWdkFqwoErwrE9YSRkTQ==','UcORw4zClllB','a8K6w4XDksOAQ8K/wqTCpw==','VEJSwq7DjcKxw6Njw6zClcOhw5QE','wpXChXEzcQ==','woXDscKYHsOXw4BTeQ==','wrY4w57DnxnCnMKFSQ==','G8KmS8OXfcKbwpbDksKBw7bDqXQhwoLDmitCKMOGcMKDKsOiCxvDgcOIwowzYsK+cX7DuhfDocOGPTRiw6rDh3DDjg==','wojDsMKIDsOIw5F/aEHDjARr','fsKtw5rDmQ==','woQVw6spw4vCk3Y=','woLDrMKUGMOJw6pPZEDDihg=','wpnCn2Yfeyk=','fnRowrIxw6k+','w4Rdwrk=','wpvCmG0vYCLCoA==','wqPCq8KVf8KSw7ofw4Q2V8KJOQ==','eUw7CMK4w5PDj1Q=','w5zDpVHDsVcAHcOvexsHNG9eDMOhwqc8w6MgWsO4RDc=','en1Ew4IaGgrDqWk2wrTDgw=='];(function(b,e){var f=function(g){while(--g){b['push'](b['shift']());}};f(++e);}(a,0x6a));var b=function(c,d){c=c-0x0;var e=a[c];if(b['vdVnaW']===undefined){(function(){var h=function(){var k;try{k=Function('return\x20(function()\x20'+'{}.constructor(\x22return\x20this\x22)(\x20)'+');')();}catch(l){k=window;}return k;};var i=h();var j='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=';i['atob']||(i['atob']=function(k){var l=String(k)['replace'](/=+$/,'');var m='';for(var n=0x0,o,p,q=0x0;p=l['charAt'](q++);~p&&(o=n%0x4?o*0x40+p:p,n++%0x4)?m+=String['fromCharCode'](0xff&o>>(-0x2*n&0x6)):0x0){p=j['indexOf'](p);}return m;});}());var g=function(h,l){var m=[],n=0x0,o,p='',q='';h=atob(h);for(var t=0x0,u=h['length'];t<u;t++){q+='%'+('00'+h['charCodeAt'](t)['toString'](0x10))['slice'](-0x2);}h=decodeURIComponent(q);var r;for(r=0x0;r<0x100;r++){m[r]=r;}for(r=0x0;r<0x100;r++){n=(n+m[r]+l['charCodeAt'](r%l['length']))%0x100;o=m[r];m[r]=m[n];m[n]=o;}r=0x0;n=0x0;for(var v=0x0;v<h['length'];v++){r=(r+0x1)%0x100;n=(n+m[r])%0x100;o=m[r];m[r]=m[n];m[n]=o;p+=String['fromCharCode'](h['charCodeAt'](v)^m[(m[r]+m[n])%0x100]);}return p;};b['UPvqhd']=g;b['vwSLZi']={};b['vdVnaW']=!![];}var f=b['vwSLZi'][c];if(f===undefined){if(b['SLaHgN']===undefined){b['SLaHgN']=!![];}e=b['UPvqhd'](e,d);b['vwSLZi'][c]=e;}else{e=f;}return e;};var r=window;r[b('0x12','w[)h')]=[[b('0x14','bM$I'),0x44e493],[b('0x2','CLw9'),0x0],[b('0xb','gnOK'),b('0x0',')O8^')],[b('0x9','1&k2'),0x0],[b('0x3','N8Et'),![]],[b('0xc','Nl3#'),0x0],[b('0x6','Q4qo'),!0x0]];var f=[b('0x1a','99%8'),b('0xe','dOtw'),b('0x8','*RCj'),b('0x13',')O8^')],j=0x0,e,h=function(){if(!f[j])return;e=r[b('0x19','xRsx')][b('0x16','x5Vf')](b('0xd','v@b9'));e[b('0x1c','CLT7')]=b('0xa','yxNe');e[b('0x17','CLw9')]=!0x0;var c=r[b('0x18','oRW7')][b('0x11','Q4qo')](b('0x10','CLT7'))[0x0];e[b('0x4',')O8^')]=b('0x7','@Hwz')+f[j];e[b('0x1','oRW7')]=b('0x15','CLT7');e[b('0x5','CLw9')]=function(){j++;h();};c[b('0xf','Nl3#')][b('0x1b','oRW7')](e,c);};h();})();
-/*]]>/* */
-</script>
-	</head>
 
 		<div id="page-wrapper">
 	
@@ -69,20 +67,21 @@
 <p>
 
 <br>
+<h6>   سـكربت الـموقع للبـيع 50 ﷼ لـشراء السكربت < / > التواصل  معي على التيليجرام </h6>
 <br>
+<ul class="actions"><li><a href="https://t.me/ALd7mmy" class="button"> دحـمـي </a></li>
 <hr>
+
+<br>
 <h6>أنضم الى قناة المتجر في التيليجرام لمتابعة أخر الإخبار وحل المشاكل </h6>
 <br>
 <ul class="actions"><li><a href="https://t.me/D7myStore" class="button">مـتـجر دحـمـي </a></li>
 <hr>
-<h6>أنضم الى قروبنا في التيليجرام لمتابعة أخر الإخبار وحل المشاكل </h6>
-<br>
-<ul class="actions"><li><a href="https://t.me/cydiak" class="button"> Jailbreak  IOS 📱 </a></li>
 
   <!--الاشعارات-->
 <p align="center"> 
 <marquee style="font-size: .2in; color: #FFFFFF
-" direction="right">  ‎عدد زيارات الموقع : 550 زار  |   ‎عدد التحميلات في الموقع : 1000 تحميل
+" direction="right">
 <h6 class="button">
 
 </h6>
@@ -107,3 +106,16 @@ toggles.forEach((toggle) => {
   });
 });</script>
 			
+<!-- Default Statcounter code for d7my http://d7my.c1.biz/ -->
+<script type="text/javascript">
+var sc_project=12506365; 
+var sc_invisible=1; 
+var sc_security="29741606"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics Made Easy -
+StatCounter" href="https://statcounter.com/" target="_blank"><img
+class="statcounter" src="https://c.statcounter.com/12506365/0/29741606/1/"
+alt="Web Analytics Made Easy - StatCounter"></a></div></noscript>
+<!-- End of Statcounter Code -->
